tests/NormalTests/paczka1/fuzzy1/60538524.err
Error in line 7: BLj S479 25,2
Error in line 10: BLj A799 49,7
Error in line 12: NCAtl S532 20,9
Error in line 15: S532 S479 6,5
Error in line 19: NCAtl A799 92,1
Error in line 17: jeYRNOIAfEm A799 1,9
Error in line 25: LPS S479 85,1
Error in line 21: NCAtl S532 17,2
